Exported routes, rendered hbs page

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,5 +1,6 @@
 <nav class="uk-navbar-container" uk-navbar>
-    <div class="uk-navbar-left">
+    <div class="uk-navbar-center">
+        <span uk-icon="world"></span>
 
         <ul class="uk-navbar-nav">
             <li class="uk-active"><a href="#">Active</a></li>
@@ -18,3 +19,9 @@
 
     </div>
 </nav>
+
+<h1 class="uk-heading-line uk-text-center uk-heading-large"><span>Welcome to Dollar Scrape!</span></h1>
+
+<div class="container" id="article-container">
+
+</div>
