Sucessfully rendered links to front-end

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -13,7 +13,7 @@
 
 <h1 class="uk-heading-line uk-text-center uk-heading-large"><span>Welcome to Dollar Scrape!</span></h1>
 
-<div class="container" id="article-container">
+<div class="uk-container" id="article-container">
 {{#each article}}
     <h3>{{title}}</h3>
     <a>{{link}}</a>
