--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,6 +7,7 @@
     <title>Welcome young scraper!</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.1.6/css/uikit.min.css" />
+    <link rel="stylesheet/text" href="../../public/css/style.css"/>
 </head>
 <body>
     {{{body}}}
