--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -17,8 +17,8 @@
 {{#each article}}
     <h3 class="uk-text-center">{{title}}</h3>
    <p class="uk-text-center uk-text-success"><a class="uk-link-text" href="{{link}}">{{link}}</a></p> 
-       <button class="uk-button uk-button-secondary">Save Article</button>
-
+     <p class="uk-text-center"><button class="uk-button uk-button-secondary">Save Article</button>
+</p>  
     <hr class="uk-divider-icon">
     {{/each}}
 </div>
