Added clear-btn functionality

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,9 +3,9 @@
         <span uk-icon="icon: world; ratio: 3"></span>
 
         <ul class="uk-navbar-nav">
-            <li class="uk-active"><a href="/saved-articles">Saved Articles</a></li>
-            <li><a href="/scrape-articles">Scrape Articles</a></li>
-            <li><a href="#">Clear</a></li>
+            <li class="uk-active"><a href="/scrape-articles">Scrape Articles</a></li>
+            <li><a href="/saved-articles">Saved Articles</a></li>
+            <li><a id="clear-btn">Clear</a></li>
         </ul>
 
     </div>
