--- a/views/saved.handlebars
+++ b/views/saved.handlebars
@@ -10,3 +10,10 @@
 
     </div>
 </nav>
+
+<h1 class="uk-heading-line uk-text-center uk-heading-large"><span>Saved Articles</span></h1>
+
+<div class="uk-container">
+
+
+</div>
