--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,7 +4,7 @@
 
         <ul class="uk-navbar-nav">
             <li class="uk-active"><a href="/scrape-articles">Scrape Articles</a></li>
-            <li><a href="/saved-articles">Saved Articles</a></li>
+            <li class=""><a href="/saved-articles">Saved Articles</a></li>
             <li><a id="clear-btn">Clear</a></li>
         </ul>
 
@@ -15,13 +15,15 @@
 
 <div style="margin-top: 4rem" class="uk-container" id="article-container">
 {{#each article}}
-<div class="article">
+  <div class="article uk-container">
     <h3 class="uk-text-center">{{title}}</h3>
-   <p class="uk-text-center uk-text-success"><a class="uk-link-text" href="{{link}}">{{link}}</a></p> 
-     <p class="uk-text-center"><button class="uk-button uk-button-secondary">Save Article</button>
-</p>  
+        <div class="uk-text-center uk-text-success">
+            <a class="uk-link-text" target="_blank" href="{{link}}">{{link}}</a>
+        </div>
+        <div>
+            <button class="uk-button uk-button-secondary uk-align-center uk-margin-top save-btn" type="submit">Save Article</button>
+        </div>
     <hr class="uk-divider-icon">
-</div>
-    
-    {{/each}}
+  </div>
+{{/each}}
 </div>
