--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -20,9 +20,7 @@
         <div class="uk-text-center uk-text-success">
             <a class="uk-link-text" target="_blank" href="{{link}}">{{link}}</a>
         </div>
-        <div>
-            <button class="uk-button uk-button-secondary uk-align-center uk-margin-top save-btn" type="submit">Save Article</button>
-        </div>
+            <button data-title={{title}} data-link={{link}} class="uk-button uk-button-secondary uk-align-center uk-margin-top save-btn" type="submit">Save Article</button>
     <hr class="uk-divider-icon">
   </div>
 {{/each}}
