--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,7 +4,7 @@
 
         <ul class="uk-navbar-nav">
             <li class="uk-active"><a href="/">Scrape Articles</a></li>
-            <li class=""><a href="/saved-articles">Saved Articles</a></li>
+            <li class="saved-page"><a href="/saved-articles">Saved Articles</a></li>
             <li><a id="clear-btn">Clear</a></li>
         </ul>
 
