minor ui improvements

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,9 +13,9 @@
 <!-- UIkit JS -->
 <script src="https://cdn.jsdelivr.net/npm/uikit@3.2.3/dist/js/uikit.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/uikit@3.2.3/dist/js/uikit-icons.min.js"></script>
-    {{!-- <link rel="stylesheet/text" href="../../public/css/style.css"/> --}}
+    <link rel="stylesheet/text" href="../../../public/css/style.css"/>
 </head>
-<body>
+<body class="uk-background-blend-darken wallpaper">
     {{{body}}}
 
 
