--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,3 @@
-#article-container {
-    margin-top: 100px;
+.wallpaper {
+    background-image: url("https://images.wallpaperscraft.com/image/surface_light_silver_background_18396_2560x1600.jpg");
 }
