--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,18 +1,21 @@
-<nav class="uk-navbar-container" uk-navbar>
-    <div class="uk-navbar-center">
-        <span uk-icon="icon: world; ratio: 3"></span>
+<div uk-sticky="sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky">
+    <nav class="uk-navbar-container" uk-navbar>
+        <div class="uk-navbar-center">
+            <span uk-icon="icon: world; ratio: 3"></span>
 
-        <ul class="uk-navbar-nav">
-            <li class="uk-active"><a href="/">Scrape Articles</a></li>
-            <li class="saved-page"><a href="/saved-articles">Saved Articles</a></li>
-            <li><a id="clear-btn">Clear</a></li>
-        </ul>
+            <ul class="uk-navbar-nav">
+                <li class="uk-active"><a href="/">Scrape Articles</a></li>
+                <li><a id="clear-btn">Clear</a></li>
+                <li class="saved-page"><a href="/saved-articles">Saved Articles</a></li>
+            </ul>
 
-    </div>
-</nav>
+        </div>
+    </nav>
+</div>
+
 
 <h1 class="uk-heading-line uk-text-center uk-heading-large"><span>Welcome to Dollar Scrape!</span></h1>
-
+    
 <div style="margin-top: 4rem" class="uk-container" id="article-container">
 {{#each articles}}
 <div class="article uk-container">
