--- a/views/saved.handlebars
+++ b/views/saved.handlebars
@@ -1,15 +1,17 @@
-<nav class="uk-navbar-container" uk-navbar>
-    <div class="uk-navbar-center">
+<div uk-sticky="sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky">
+    <nav class="uk-navbar-container" uk-navbar>
+        <div class="uk-navbar-center">
         <span uk-icon="icon: world; ratio: 3"></span>
 
-        <ul class="uk-navbar-nav">
-            <li class=""><a href="/">Scrape Articles</a></li>
-            <li class="uk-active saved-page"><a href="/saved-articles">Saved Articles</a></li>
-            <li><a id="clear-btn">Clear</a></li>
-        </ul>
+            <ul class="uk-navbar-nav">
+                <li class=""><a href="/">Scrape Articles</a></li>
+                <li class="uk-active saved-page"><a href="/saved-articles">Saved Articles</a></li>
+                <li><a id="clear-btn">Clear</a></li>
+            </ul>
 
-    </div>
-</nav>
+        </div>
+    </nav>
+</div>
 
 <h1 class="uk-heading-line uk-text-center uk-heading-large"><span>Saved Articles</span></h1>
 
@@ -26,7 +28,6 @@
     </div>
 </div>
 <hr class="uk-divider-icon">
-
 {{/each}}
 
 </div>
