--- a/client/src/App.css
+++ b/client/src/App.css
@@ -41,7 +41,15 @@ nav.navbar {
 }
 
 .card-width {
-  max-width: 100%;
+  max-width: 80%;
+}
+
+.dark-shadow {
+  transition: .5s;
+}
+.dark-shadow:hover {
+  box-shadow: 3px 3px 10px black;
+
 }
 
 .bg-dark-brown {
@@ -51,4 +59,10 @@ nav.navbar {
 .bg-gradient-brown {
   background: rgb(42,42,45);
   background: linear-gradient(180deg, rgba(42,42,45,1) 0%, rgba(52,39,47,1) 20%, rgba(77, 50, 50,1) 100%);
+}
+
+@media (max-width: 720px) {
+  .card-width {
+    max-width: 95%;
+  }
 }
