--- a/client/src/App.css
+++ b/client/src/App.css
@@ -36,6 +36,10 @@ nav.navbar {
   box-shadow: 0px 1px 10px black;
 }
 
+.saved {
+  min-height: 80vh;
+}
+
 .jumbotron {
   background: url('https://images.pexels.com/photos/590493/pexels-photo-590493.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260');
 }
