--- a/client/src/App.css
+++ b/client/src/App.css
@@ -34,6 +34,49 @@
 
 nav.navbar {
   box-shadow: 0px 1px 10px black;
+  font-family: 'Cinzel Decorative', cursive;
+
+}
+
+nav li a {
+  font-family: 'Julius Sans One', sans-serif;
+
+}
+
+Form h2 {
+  font-family: 'Julius Sans One', sans-serif;
+
+}
+
+.jumbotron h1 {
+  font-family: 'Cinzel Decorative', cursive;
+
+}
+
+.card-body h4 {
+  font-family: 'Julius Sans One', sans-serif;
+  font-weight: bold;
+}
+
+.card-body h5 {
+  font-family: 'Julius Sans One', sans-serif;
+  font-style: italic;
+
+}
+
+.card-body .card-text {
+  font-family: 'Maven Pro', sans-serif;
+
+}
+
+.card-header {
+  font-family: 'Julius Sans One', sans-serif;
+font-size: larger;
+}
+
+.results-text {
+  font-family: 'Julius Sans One', sans-serif;
+
 }
 
 .saved {
@@ -49,7 +92,7 @@ nav.navbar {
 }
 
 .dark-shadow {
-  transition: .5s;
+  transition: .3s;
 }
 .dark-shadow:hover {
   box-shadow: 3px 3px 10px black;
@@ -64,6 +107,7 @@ nav.navbar {
   background: rgb(42,42,45);
   background: linear-gradient(180deg, rgba(42,42,45,1) 0%, rgba(52,39,47,1) 20%, rgba(77, 50, 50,1) 100%);
 }
+
 
 @media (max-width: 720px) {
   .card-width {
