--- a/client/src/App.css
+++ b/client/src/App.css
@@ -83,6 +83,10 @@ font-size: larger;
   min-height: 80vh;
 }
 
+.home { 
+  min-height: 80vh;
+}
+
 .jumbotron {
   background: url('https://images.pexels.com/photos/590493/pexels-photo-590493.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260');
 }
