--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,12 +13,12 @@
 <!-- UIkit JS -->
 <script src="https://cdn.jsdelivr.net/npm/uikit@3.2.3/dist/js/uikit.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/uikit@3.2.3/dist/js/uikit-icons.min.js"></script>
-    <link rel="stylesheet/text" href="../../../public/css/style.css"/>
+
+{{!-- Local CSS --}}
+<link rel="stylesheet" href="/css/style.css"/>
 </head>
-<body class="uk-background-blend-darken wallpaper">
+<body>
     {{{body}}}
-
-
 
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script src="/js/app.js"></script>
