--- a/views/saved.handlebars
+++ b/views/saved.handlebars
@@ -1,12 +1,12 @@
 <div uk-sticky="sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky">
-    <nav class="uk-navbar-container" uk-navbar>
+    <nav class="uk-navbar-container bg-black" uk-navbar>
         <div class="uk-navbar-center">
         <span uk-icon="icon: world; ratio: 3"></span>
 
-            <ul class="uk-navbar-nav">
-                <li class=""><a href="/">Scrape Articles</a></li>
-                <li><a id="clear-btn">Clear</a></li>
-                <li class="uk-active saved-page"><a href="/saved-articles">Saved Articles</a></li>
+            <ul class="uk-navbar-nav white-text">
+                <li class=""><a class="white-text" href="/">Home</a></li>
+                <li><a class="white-text" id="clear-btn">Clear Articles</a></li>
+                <li class="uk-active saved-page"><a class="green-text" href="/saved-articles">Saved Articles</a></li>
             </ul>
 
         </div>
